Publish AdvCal 2021 21th day

--- a/articles/1311288523dad2.md
+++ b/articles/1311288523dad2.md
@@ -1,9 +1,9 @@
 ---
 title: "GitHub Actionsから得られた結果をOPAサーバに問い合わせる"
-emoji: "🦔"
+emoji: "📡"
 type: "tech" # tech: 技術記事 / idea: アイデア
 topics: ["opa", "rego", "githubactions"]
-published: false
+published: true
 ---
 
 この記事は[OPA/Regoアドベントカレンダー](https://adventar.org/calendars/6601)の21日目です。
