--- a/articles/647dcd83039503.md
+++ b/articles/647dcd83039503.md
@@ -6,4 +6,4 @@ topics: ["opa", "rego"]
 published: false
 ---
 
-この記事は[OPA/Regoアドベントカレンダー](https://adventar.org/calendars/6601)のN日目です。
+この記事は[OPA/Regoアドベントカレンダー](https://adventar.org/calendars/6601)の22日目です。
