--- a/articles/1311288523dad2.md
+++ b/articles/1311288523dad2.md
@@ -66,7 +66,7 @@ https://github.com/m-mizutani/opa-inquiry
         uses: m-mizutani/opa-inquiry@main
         with:
           url: https://opa-server-xxxxxxxxxxxx.a.run.app
-          input-file: trivy-results.json
+          input-file: results.json
           fail-defined: true
 ```
 
