--- a/articles/b0d3c7f7377609.md
+++ b/articles/b0d3c7f7377609.md
@@ -130,5 +130,5 @@ name_map = out {
 - Some keyword: https://www.openpolicyagent.org/docs/latest/policy-language/#some-keyword
 - Membership and iteration `in`: https://www.openpolicyagent.org/docs/latest/policy-language/#membership-and-iteration-in
 
-[^iter]: 公式ドキュメントでは、これらの機能の総称は特にないようです
+[^iter]: ~~公式ドキュメントでは、これらの機能の総称は特にないようです~~ (2021.12.21訂正) 公式でもiterationと呼ばれていました https://www.openpolicyagent.org/docs/latest/policy-reference/#iteration
 [^cannot_assign]: ちなみに `idx = x {...}` のルールで複数の異なる値を返そうとすると、同じ変数に複数回代入を試みたとみなされて失敗します
