Publish AdvCal 2021 22th day

--- a/articles/1755527e782183.md
+++ b/articles/1755527e782183.md
@@ -1,6 +1,6 @@
 ---
 title: "OPA/Regoの応用（SOAR）"
-emoji: "🔖"
+emoji: "🚨"
 type: "tech" # tech: 技術記事 / idea: アイデア
 topics: ["opa", "rego"]
 published: false
