--- a/articles/647dcd83039503.md
+++ b/articles/647dcd83039503.md
@@ -3,7 +3,7 @@ title: "OPAの拡張（カスタム関数）"
 emoji: "🔨"
 type: "tech" # tech: 技術記事 / idea: アイデア
 topics: ["opa", "rego", "golang"]
-published: false
+published: true
 ---
 
 この記事は[OPA/Regoアドベントカレンダー](https://adventar.org/calendars/6601)の22日目です。
